# MacMetalPy

./: .gitignore  API_COMPARISON_REPORT.md  LICENSE  MANIFEST.in  README.md  TEST_COVERAGE_PLAN.md  catalog_macmetalpy.py  catalog_numpy.py  compare_apis.py  coverage_audit.py  macmetalpy_catalog.json  numpy_catalog.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: BENCHMARK_REPORT.md  PLAN.md  api_comparison.txt  api_comparison_v2.txt  bench_advanced.py  bench_core.py  bench_expanded.py  bench_float64.py  bench_vs_numpy.py  compare_apis.py  compare_test_coverage.py  compare_test_suites.py  enumerate_apis.py  enumerate_apis_v2.py  enumerate_numpy2_apis_v2.py  enumerate_numpy_apis.py  extract_numpy_test_coverage.py  macmetalpy_apis.txt  macmetalpy_apis_v2.txt  macmetalpy_test_coverage_v2.txt  numpy2_apis.txt  numpy2_apis_v2.txt  numpy2_test_coverage.txt  numpy_cache.json  optimization_report.md  results.json  test_comparison.txt  test_comparison_v2.txt  test_coverage.txt  test_coverage_audit_v2.txt
src/macmetalpy/: __init__.py  _accelerator.c  _broadcasting.py  _config.py  _dtypes.py  _fusion.py  _kernel_cache.py  _kernels.py  _metal_backend.py  bitwise_ops.py  complex_ops.py  config_ops.py  creation.py  dtype_utils.py  fft.py  format_ops.py  functional.py  index_tricks.py  indexing.py  io.py  linalg.py  linalg_top.py  logic_ops.py  manipulation.py  math_ext.py  math_ops.py  nan_ops.py  ndarray.py  poly_ops.py  random.py  raw_kernel.py  reductions.py  set_ops.py  sorting.py  ufunc.py  ufunc_ops.py  utils.py  window.py
tests/: conftest.py  test_api_reexports.py  test_broadcasting.py  test_comparison.py  test_comparison_funcs.py  test_complex_ops.py  test_config.py  test_config_integration.py  test_creation.py  test_creation_gaps.py  test_creation_linalg.py  test_creation_linalg_ext.py  test_creation_params_final.py  test_dtype_constants.py  test_dtype_format_final.py  test_dtype_system.py  test_dtype_utils.py  test_edge_shapes.py  test_elementwise.py  test_error_handling.py  test_extra.py  test_fft.py  test_fft_sort_idx_params.py  test_final_param_gaps.py  test_functional.py  test_fusion.py  test_index_tricks.py  test_indexing.py  test_indexing_funcs.py  test_inplace_ops.py  test_interop.py  test_io_gaps.py  test_linalg.py  test_linalg_gaps.py  test_linalg_logic_params.py  test_logic_bitwise.py  test_logic_gaps.py  test_manip_ext.py  test_manipulation.py  test_manipulation_gaps.py  (+49 more)
