[build-system]
requires = ["setuptools>=68.0", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "macmetalpy"
version = "0.1.0"
description = "CuPy-compatible GPU array library for Apple Silicon using MetalGPU"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Grant Klepzig"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "metalgpu>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/grantkl/MacMetalPy"
Repository = "https://github.com/grantkl/MacMetalPy"
"Bug Tracker" = "https://github.com/grantkl/MacMetalPy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
