[build-system]
requires = ["setuptools>=68.0", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macmetalpy"
version = "0.1.1"
description = "CuPy-compatible GPU array library for Apple Silicon using MetalGPU"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Grant Klepzig"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "metalgpu>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/grantkl/MacMetalPy"
Repository = "https://github.com/grantkl/MacMetalPy"
"Bug Tracker" = "https://github.com/grantkl/MacMetalPy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",   # module-level import not at top of file
    "E501",   # line too long
    "E701",   # multiple statements on one line
    "E712",   # comparison to True/False
    "E741",   # ambiguous variable name
    "F401",   # unused import
    "F541",   # f-string without placeholders
    "F601",   # multi-value repeated key literal
    "F841",   # unused variable
]
